# kwin-effects-soft-open-close

./: CMakeLists.txt
src/: CMakeLists.txt  main.cpp  metadata.json  softopencloseeffect.cpp  softopencloseeffect.h
